fix(types): expose pace type

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tools-for-running",
-  "version": "0.2.0",
+  "name": "running-tools",
+  "version": "0.1.0",
   "description": "Tools for running. Convert speed into pace, convert miles to kilometers, etc.",
   "author": "nathan-lbt",
   "license": "MIT",
