--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "running-tools",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Tools for running. Convert speed into pace, convert miles to kilometers, etc.",
+  "repository": "https://github.com/nathan-lbt/running-tools",
   "author": "nathan-lbt",
   "license": "MIT",
   "main": "./lib/index.js",
