--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "running-tools",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "Tools for running. Convert speed into pace, convert miles to kilometers, etc.",
   "repository": "https://github.com/nathan-lbt/running-tools",
   "author": "nathan-lbt",
@@ -15,7 +15,8 @@
     "speed",
     "distances",
     "pace",
-    "elevation"
+    "elevation",
+    "splits"
   ],
   "scripts": {
     "build": "tsc --project tsconfig.lib.json",
